--- a/project.html
+++ b/project.html
@@ -86,7 +86,7 @@
         <header class="container-fluid sticky">
             <div class="row custom-row">
                 <div class="col-6 col-md-2 col-lg-2 logo">
-                    <a href="/">
+                    <a href="./index.html">
                         <img loading="lazy" src="./project_files/logo-white.png" alt="Century" class="img-fluid" width="207" height="121">
                     </a>
                 </div>
