--- a/about.html
+++ b/about.html
@@ -208,6 +208,9 @@
                     font-size: 0.95rem;
                 }
             }
+            header .nav__hamburger{
+                display: none !important;
+            }
         </style>
     </head>
     <body __processed_8a1fd0dd-d0b1-4d9a-8429-a5731576c3bd__="true" style="overflow-y: auto;" cz-shortcut-listen="true">
@@ -234,6 +237,12 @@
                         </li>
                         <li>
                             <a href="./project.html">Residential</a>
+                        </li>
+                        <li class="">
+                            <a href="./career.html">Careers</a>
+                        </li>
+                        <li class="">
+                            <a href="./blog.html">Blogs</a>
                         </li>
                         <li>
                             <!-- <a href="https://commercial.centuryrealestate.in/" target="_blank">Commercial</a> -->
@@ -262,6 +271,8 @@
                             <li class="mobile"><a href="./index.html">Home</a></li>
                             <li class="mobile"><a href="./about.html">About Us</a></li>
                             <li class="mobile"><a href="./project.html">Residential</a></li>
+                            <li class="mobile"><a href="./career.html">Careers</a></li>
+                            <li class="mobile"><a href="./blog.html">Blogs</a></li>
                             <!-- <li class="mobile"><a href="https://commercial.centuryrealestate.in/" target="_blank">Commercial</a></li> -->
                             
                             <li><a href="https://www.centuryrealestate.in/why-us">Why Us</a></li>
