--- a/index.html
+++ b/index.html
@@ -515,6 +515,9 @@
                     font-size: 0.95rem;
                 }
             }
+            header .nav__hamburger{
+                display: none !important;
+            }
         </style>
     </head>
     <body style="overflow-y: auto;" __processed_42fdcd1c-1e9c-4b07-980d-db9f524bd6cc__="true" cz-shortcut-listen="true">
@@ -533,7 +536,7 @@
                 </div>
                 <nav class="col-6 col-md-10 col-lg-10 nav">
                     <ul>
-                        <li>
+                        <li class="active">
                             <a href="./index.html">Home</a>
                         </li>
                         <li>
@@ -541,6 +544,12 @@
                         </li>
                         <li>
                             <a href="./project.html">Residential</a>
+                        </li>
+                        <li >
+                            <a href="./career.html">Careers</a>
+                        </li>
+                        <li class="">
+                            <a href="./blog.html">Blogs</a>
                         </li>
                         <li>
                             <!-- <a href="https://commercial.centuryrealestate.in/" target="_blank">Commercial</a> -->
@@ -569,6 +578,8 @@
                             <li class="mobile"><a href="./index.html">Home</a></li>
                             <li class="mobile"><a href="./about.html">About Us</a></li>
                             <li class="mobile"><a href="./project.html">Residential</a></li>
+                            <li class="mobile"><a href="./career.html">Careers</a></li>
+                            <li class="mobile"><a href="./blog.html">Blogs</a></li>
                             <!-- <li class="mobile"><a href="https://commercial.centuryrealestate.in/" target="_blank">Commercial</a></li> -->
                             
                             <li><a href="https://www.centuryrealestate.in/why-us">Why Us</a></li>
@@ -671,6 +682,72 @@
 	            	        </div>
 	    </a>
 	</div>
+
+
+
+
+    <style>
+        .right-block{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: end;
+            text-align: left;
+            gap: 2rem;
+        }
+        .right-title{
+            width: 60%;
+            text-align: left;
+        }
+        .right-desc{
+            width: 60%;
+            text-align: left;
+        }
+        .right-explore{
+            width: 60%;
+            text-align: left;
+        }
+        .right-explore span{
+            border: 1px solid #9F1635;
+            text-decoration: none;
+            padding: 8px 12px;
+            border-radius: 8px;
+            color: #9F1635;
+        }
+        .right-explore span:hover{
+            background-color: #9F1635;
+            color: white;
+        }
+        a{
+            /* color: white; */
+            text-decoration: none;
+        }
+    </style>
+
+
+    <div class="right-block">
+        <h2 class="right-title">Experience Elevated Living at Needs3 Project 168</h2>
+
+        <p class="right-desc">
+            Welcome to a curated collection of premium 3-BHK homes set within a beautifully landscaped gated community. Enjoy modern architecture, superior connectivity, and a perfectly balanced lifestyle in the heart of Horamavu.
+        </p>
+
+        <a href="./needs3.html" class="explore-btn right-explore">
+            <span>
+                EXPLORE →
+            </span>
+        </a>
+    </div>
+
+
+
+
+
+
+
+
+
 		<!-- <div class="projects__lists__section__item" style="position: absolute; left: 695.5px; top: 0px; transition-property: opacity, transform; transition-duration: 800ms; transition-delay: 30ms; transform: translate3d(0.0004px, 0px, 0px);">
 	    <a href="https://www.centuryrealestate.in/residential/projects/century-liva" target="_blank" class="projects__lists__section__item__inner">
 	        <img loading="lazy" src="./centuryrealestate_files/iVIO9ssIIvfn64o0iZLl1Tw0sbsUsS.jpg" alt="Century Liva" class="img-fluid" width="402" height="402">
