--- a/blogs3.html
+++ b/blogs3.html
@@ -187,6 +187,9 @@
                     font-size: 0.95rem;
                 }
             }
+            header .nav__hamburger{
+                display: none !important;
+            }
         </style>
     </head>
     <body cz-shortcut-listen="true" style="overflow-y: auto;" __processed_a93fa7f5-61a2-419f-a63f-09ec61f3beba__="true">
@@ -211,8 +214,14 @@
                         <li>
                             <a href="./about.html">About Us</a>
                         </li>
-                        <li class="active">
+                        <li class="">
                             <a href="./project.html">Residential</a>
+                        </li>
+                        <li class="">
+                            <a href="./career.html">Careers</a>
+                        </li>
+                        <li class="">
+                            <a href="./blog.html">Blogs</a>
                         </li>
                         <li>
                             <!-- <a href="https://commercial.centuryrealestate.in/" target="_blank">Commercial</a> -->
@@ -241,6 +250,8 @@
                             <li class="mobile"><a href="./index.html">Home</a></li>
                             <li class="mobile"><a href="./about.html">About Us</a></li>
                             <li class="mobile"><a href="./project.html">Residential</a></li>
+                            <li class="mobile"><a href="./career.html">Careers</a></li>
+                            <li class="mobile"><a href="./blog.html">Blogs</a></li>
                             <!-- <li class="mobile"><a href="https://commercial.centuryrealestate.in/" target="_blank">Commercial</a></li> -->
                             
                             <li><a href="https://www.centuryrealestate.in/why-us">Why Us</a></li>
