--- a/needs3.html
+++ b/needs3.html
@@ -942,13 +942,212 @@
             font-size: 0.95rem;
         }
     }
+
+
+    .footer {
+    background: #f5f5f0;
+    padding: 60px 20px 0;
+    position: relative;
+    font-family: "corporate_sregular", Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.awards-footer {
+    position: absolute;
+    top: 0;
+    right: 20px;
+    z-index: 10;
+}
+
+.awards-footer img {
+    max-width: 96px;
+    height: auto;
+}
+
+.footer__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 40px;
+    border-bottom: 1px solid #d0d0d0;
+}
+
+.footer__top__logo img {
+    width: 15rem;
+    height: auto;
+}
+
+.footer__top__address {
+    text-align: left;
+}
+
+.footer__top__address p {
+    margin-bottom: 10px;
+    color: #333;
+    font-size: 1rem;
+    line-height: 1.6;
+}
+
+.footer__top__address a {
+    color: #0066cc;
+    text-decoration: none;
+}
+
+.footer__top__address a:hover {
+    text-decoration: underline;
+}
+
+.footer__top__social {
+    text-align: right;
+}
+
+.footer__top__social ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 15px;
+    justify-content: flex-end;
+}
+
+.footer__top__social ul li a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+    border: 2px solid #333;
+    border-radius: 4px;
+    color: #333;
+    font-size: 1.3rem;
+    transition: all 0.3s ease;
+}
+
+.footer__top__social ul li a:hover {
+    background-color: #333;
+    color: #fff;
+}
+
+.footer__bottom {
+    background-color: #a82240;
+    margin: 0 -20px;
+    padding: 20px 20px;
+    text-align: center;
+}
+
+.footer__bottom__p p {
+    color: #ffffff;
+    margin: 0;
+    font-size: 0.95rem;
+}
+
+/* Media Queries */
+@media (max-width: 991px) {
+    .footer__top {
+        flex-direction: column;
+        text-align: center;
+        gap: 30px;
+    }
+
+    .footer__top__address {
+        text-align: center;
+    }
+
+    .footer__top__social {
+        text-align: center;
+    }
+
+    .footer__top__social ul {
+        justify-content: center;
+    }
+
+    .awards-footer {
+        position: static;
+        display: block;
+        text-align: center;
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 768px) {
+    .footer {
+        padding: 40px 15px 0;
+    }
+
+    .footer__top__logo img {
+        max-width: 200px;
+    }
+
+    .awards-footer img {
+        max-width: 80px;
+    }
+
+    .footer__top__address p {
+        font-size: 0.95rem;
+    }
+
+    .footer__top__social ul li a {
+        width: 45px;
+        height: 45px;
+        font-size: 1.2rem;
+    }
+
+    .footer__bottom__p p {
+        font-size: 0.9rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .footer {
+        padding: 30px 10px 0;
+    }
+
+    .footer__top {
+        gap: 25px;
+        padding-bottom: 30px;
+    }
+
+    .footer__top__logo img {
+        max-width: 180px;
+    }
+
+    .awards-footer img {
+        max-width: 70px;
+    }
+
+    .footer__top__address p {
+        font-size: 0.9rem;
+    }
+
+    .footer__top__social ul {
+        gap: 10px;
+    }
+
+    .footer__top__social ul li a {
+        width: 40px;
+        height: 40px;
+        font-size: 1.1rem;
+    }
+
+    .footer__bottom {
+        padding: 15px 10px;
+    }
+
+    .footer__bottom__p p {
+        font-size: 0.85rem;
+    }
+}
 </style>
+
+<!-- <link rel="stylesheet" href="./centuryrealestate_files/style.css">
+<link rel="stylesheet" href="./centuryrealestate_files/bootstrap.css">
+<link rel="stylesheet" href="./centuryrealestate_files/all.min.css"> -->
 
 </head>
 
 <body cz-shortcut-listen="true" __processed_53bc6a89-48dc-41ea-8aae-9ef83bc665ef__="true">
 
-    <a href="https://wa.me/918884456808" class="whatsapp-logo">
+    <a href="https://wa.me/919990227494" class="whatsapp-logo">
         <!-- <img src="./whatsapp.jpeg" alt="" class="whatsapp-logo"> -->
         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="70" height="70" viewBox="0 0 48 48">
             <path fill="#fff" d="M4.9,43.3l2.7-9.8C5.9,30.6,5,27.3,5,24C5,13.5,13.5,5,24,5c5.1,0,9.8,2,13.4,5.6	C41,14.2,43,18.9,43,24c0,10.5-8.5,19-19,19c0,0,0,0,0,0h0c-3.2,0-6.3-0.8-9.1-2.3L4.9,43.3z">
@@ -990,9 +1189,9 @@
                 <a href="#contact-us">Contact Us</a>
             </div>
 
-            <a href="tel:8884456808" class="phone-number">
+            <a href="tel:+919990227494" class="phone-number">
                 <img src="./Sky Park_files/phone-call-icon.png" alt="" style="width: 28px; height: 28px; border-radius: 50%;">
-                +91 8884456808
+                +91 9990227494
             </a>
 
             <button class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</button>
@@ -1010,7 +1209,7 @@
                 <a href="#gallery" onclick="toggleMobileMenu()">Gallery</a>
                 <a href="#contact" onclick="toggleMobileMenu()">Contact Us</a>
                 <div style="padding-top: 1rem; border-top: 1px solid rgba(255,255,255,0.2); margin-top: 1rem;">
-                    +91 8884456808
+                    +91 9990227494
                 </div>
             </div>
         </div>
@@ -2210,16 +2409,16 @@
                             <div class="panel">
                                 <div class="panel-heading">
                                     <h4 class="panel-title">
-                                        <a href="https://arista.dnrgroup.in/#panelBodyOne" class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" aria-expanded="false">HOSPITALS</a>
+                                        <a href="https://arista.dnrgroup.in/#panelBodyOne" class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" aria-expanded="false">Location Advantages</a>
                                     </h4>
                                 </div>
-                                <div id="panelBodyOne" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                                <div id="panelBodyOne"  aria-expanded="false" >
                                     <div class="panel-body">
-                                        <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;  500 meters from outer ring road</p>
-                                        <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;  Indiranagar Metro Railway Station is nearby</p>
-                                        <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;  Closer to Manyatha Tech Park</p>
-                                        <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp; 6kms to Gopalan Signature Mall</p>
-                                        <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;  5kms to Elements Mall</p>
+                                        <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;   500 meters from outer ring road</p>
+                                        <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;   Indiranagar Metro Railway Station is nearby</p>
+                                        <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;   Closer to Manyatha Tech Park</p>
+                                        <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;   6kms to Gopalan Signature Mall</p>
+                                        <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;   5kms to Elements Mall</p>
                                         <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;   Big Bazar and D Mart located nearby</p>
                                         <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;   Restaurants like Adyar Ananda Bhavan,</p>
                                         <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;   Udipi Sagar available close by</p>
@@ -2938,10 +3137,9 @@
 
 
     <!-- Footer Section -->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <!-- Left Section - Company Info (No Changes) -->
                 <div class="footer-left">
                     <div class="logo">
                         <img src="./Sky Park_files/logo-new.png" alt="">
@@ -2971,13 +3169,10 @@
                             <a href="https://mohammedsalman3052004.github.io/Skypark/skypark.html#" class="social-icon">
                                 <img src="./Sky Park_files/social.svg" alt="" class="social-icon" style="height: 40px; width: 40px;">
                             </a>
-                            <!-- <a href="#" class="social-icon">🐦</a> -->
-                            <!-- <a href="#" class="social-icon">💼</a> -->
                         </div>
                     </div>
                 </div>
 
-                <!-- Quick Links Section (Updated) -->
                 <div class="quick-links">
                     <h3>Quick Links</h3>
                     <ul>
@@ -2993,7 +3188,6 @@
                     </ul>
                 </div>
 
-                <!-- Get in Touch Form -->
                 <div class="contact-form">
                     <h3>Get in Touch</h3>
                     <form method="POST" action="https://emailjsfuntions-428145106157.asia-south1.run.app/skypark-footer-submit" id="footerForm">
@@ -3022,13 +3216,49 @@
                 </div>
             </div>
 
-            <!-- Footer Bottom (No Changes) -->
             <div class="footer-divider"></div>
             <div class="registration-info">
                 PRM/KA/RERA/1251/309/PR/181109/002131
             </div>
             <div class="copyright">
                 Copyright © Sohan Realty 2025. All Rights Reserved.
+            </div>
+        </div>
+    </footer> -->
+
+    
+    <footer class="container-fluid footer" data-scroll-offset="5%" data-scroll-repeat="" data-scroll="" data-scroll-class="inView">
+        <span class="awards-footer"><img src="./project_files/gptw-certification-badge-2025.svg" alt="Great place to work" class="img-fluid" width="96" height="164"></span>
+        <div class=" row custom-row footer__top align-items-center">
+            <div class="col-12 col-sm-12 col-md-3">
+                <div class="footer__top__logo">
+                    <img loading="lazy" src="./project_files/century-50-years.svg" alt="Century Propery" class="img-fluid" width="254" height="155">
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6">
+                <div class="footer__top__address">
+                    <p class="paragraph">Site Address: Survey No. 98/3A, Kenchappa Garden 3rd Main Road, Hoysala Nagar Rd, <br>Horamavu, Bengaluru, Karnataka 560016</p>
+                    <p>Phone - <a href="tel:+919990227494">9990227494</a></p>
+                    <p>Email - <a href="mailto:info@casatrance.com">info@casatrance.com</a></p>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-3">
+                <div class="footer__top__social">
+                    <ul>
+                        <li><a href="https://www.facebook.com/centuryrealestatebangalore" target="_blank"><i class="fa-brands fa-facebook-official" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.instagram.com/centuryrealestate/" target="_blank"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="https://twitter.com/centuryblr" target="_blank"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
+                        </li>
+                        <li><a href="https://www.linkedin.com/company/century-real-estate-holdings-pvt-ltd" target="_blank"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row custom-row footer__bottom">
+            <div class="col-12 col-sm-12 ">
+                <div class="footer__bottom__p">
+                    <p class="paragraph">© 2025 by Century Real Estate Holdings Pvt. Ltd. All rights reserved.</p>
+                </div>
             </div>
         </div>
     </footer>
