--- a/needs3.html
+++ b/needs3.html
@@ -1137,6 +1137,9 @@
         font-size: 0.85rem;
     }
 }
+            body{
+                background-color: #fffaef !important;
+            }
 </style>
 
 <!-- <link rel="stylesheet" href="./centuryrealestate_files/style.css">
