--- a/project.html
+++ b/project.html
@@ -27,7 +27,7 @@
         <link rel="manifest" href="https://www.centuryrealestate.in/site.webmanifest">
         <link rel="mask-icon" href="https://www.centuryrealestate.in/safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#00aba9">
-        <meta name="theme-color" content="#9f1635">
+        <meta name="theme-color" content="#bb9765">
 
         <link rel="stylesheet" href="./project_files/bootstrap.css" as="style" onload="this.onload=null;this.rel=&#39;stylesheet&#39;">
         <link rel="stylesheet" href="./project_files/style.css" as="style" onload="this.onload=null;this.rel=&#39;stylesheet&#39;">
@@ -76,6 +76,9 @@
             .project__enquiry .error {color:black !IMPORTANT;}
             header .nav__hamburger{
                 display: none !important;
+            }
+            body{
+                background-color: #fffaef !important;
             }
         </style>
     </head>
@@ -256,14 +259,14 @@
             text-align: left;
         }
         .right-explore span{
-            border: 1px solid #9F1635;
+            border: 1px solid #bb9765;
             text-decoration: none;
             padding: 8px 12px;
             border-radius: 8px;
-            color: #9F1635;
+            color: #bb9765;
         }
         .right-explore span:hover{
-            background-color: #9F1635;
+            background-color: #bb9765;
             color: white;
         }
         a{
@@ -596,7 +599,7 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </div>
 </form>            </div>
-            <div class="col-12 col-sm-12 col-md-6" style="background: #2f090e;"></div>
+            <div class="col-12 col-sm-12 col-md-6" style="background: #bb9765;"></div>
         </div>
     </div>
 </main>
@@ -1067,7 +1070,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="#9f1635"><path d="M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z"></path></svg></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="#bb9765"><path d="M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z"></path></svg></button>
                 </div>
                 <div class="modal-body">
                     <h6>Nice to hear from you!</h6>
